--- a/Hello_world.ipynb
+++ b/Hello_world.ipynb
@@ -1888,14 +1888,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5bd99e0d-feb3-4f65-f1fb-6d9fcb59966f"
+        "outputId": "401f272c-d023-42bd-b56e-364a09c76017"
       },
       "source": [
         "import numpy as np\n",
         "titanic = np.genfromtxt(\"https://raw.githubusercontent.com/Saranchana/DW/master/TitanicCSV.csv\", delimiter=\";\", missing_values = None, dtype=str)\n",
         "titanic.shape"
       ],
-      "execution_count": 93,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1907,7 +1907,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 189
         }
       ]
     },
@@ -1924,20 +1924,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bpeh-IE75OBZ",
+        "id": "FQPbGcH8OA7I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "e440b66f-0b8d-4ca6-d2fe-dcca5a05e9f9"
+      },
+      "source": [
+        "titanic[0,:]"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['First', 'Allen, Miss. Elisabeth Walton', 'Female', '29.0', '0',\n",
+              "       '0', '24160', '211.3375', 'B5', 'Southampton', '2', 'Yes'],\n",
+              "      dtype='<U82')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2BDyEASbPt4A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "titanic =np.delete(titanic,[1,6,7,8,9,10],1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kNRZ1x1fP540",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "69c2e813-b03a-4cce-9d20-ef96acd900bd"
+        "outputId": "b9cf778a-9440-4c36-f92b-c220be59a46d"
       },
       "source": [
-        "titanic\n",
-        "titanic_clean=np.delete(titanic,[1,6,7,8,9,10],1)\n",
-        "titanic_clean[0,:]"
+        "titanic[0,:]"
       ],
-      "execution_count": 95,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1949,7 +1992,151 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 192
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-xXPFfs8QFLW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "efbf29ec-7b1f-4e3e-ddc7-34ffae26cfce"
+      },
+      "source": [
+        "rows,cols = np.where(titanic== None)\n",
+        "print(str(len(np.unique(rows)))+ \" \" +str(len(np.unique(cols))))"
+      ],
+      "execution_count": 193,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HAlAr9GXQ84s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f5ff2ca8-6be0-4e7a-f369-997226b7fba7"
+      },
+      "source": [
+        "rows,cols = np.where(titanic== '')\n",
+        "print(str(len(np.unique(rows)))+ \" \" +str(len(np.unique(cols))))"
+      ],
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "263 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p28rcG6TREKz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "09f14a77-e04c-4e17-aa51-b69281413d82"
+      },
+      "source": [
+        "np.unique(cols)"
+      ],
+      "execution_count": 195,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 195
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4OAdbW9ZRLGU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d29550d2-2a6b-4885-bfb0-f21573371cfb"
+      },
+      "source": [
+        "titanic= np.delete(titanic,2,1)\n",
+        "titanic[0,:]"
+      ],
+      "execution_count": 196,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['First', 'Female', '0', '0', 'Yes'], dtype='<U82')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 196
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WRhaWWMYSLJF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "943ddb63-07fa-4764-98bc-816807efd650"
+      },
+      "source": [
+        "passenger_class =np.unique(titanic[:,0])\n",
+        "passenger_class"
+      ],
+      "execution_count": 197,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['First', 'Second', 'Third'], dtype='<U82')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 197
         }
       ]
     },
@@ -1966,109 +2153,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FyK4qXY46_V4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "header = titanic[0,:]; titanic = np.delete(titanic,0,0)\n",
-        "sex= np.unique(titanic[:,2])\n",
-        "survived= np.unique(titanic[:,11])\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gDdOz5wdFgtN",
+        "id": "dRSwNONvLV4i",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 269
         },
-        "outputId": "9306bae4-c5c4-4847-f1ad-3dbc28e98b16"
+        "outputId": "a3e33d08-0c48-404a-c87e-8030c50a21c1"
       },
       "source": [
-        "sex=[sum(titanic[:,2]==passenger_male[0]),\n",
-        "    sum(titanic[:,2]==passenger_male[1])]\n",
-        "sex\n"
+        "import matplotlib.pyplot as plt\n",
+        "fig, axes = plt.subplots(1,2)\n",
+        "axes[0].bar(passenger_male,passenger_male_value)\n",
+        "axes[1].bar(passenger_survived,passenger_survived_value)\n",
+        "plt.show()\n"
       ],
-      "execution_count": 125,
+      "execution_count": 202,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAFGpJREFUeJzt3X+w5XV93/HnSxBREgFhy1Bgu0yz\nNcM4inQLOGY6RMABbMUmSCFWkZDZpEE0WqdQp6046SRrGqOhtkw2QrLYREAMkShVEbFpJpWwwJaf\noawEwjIIqwIWfwZ994/zuezZ5eI9d/eee879nOdj5sz9fj/f7znnc8+e89rP+X4/9/tOVSFJ6tcL\nJt0BSdJ4GfSS1DmDXpI6Z9BLUucMeknqnEEvSZ0z6CWpcwa9JHXOoJekzu096Q4AHHzwwbVmzZpJ\nd0OduvXWW79eVasm8dy+tzVOo763pyLo16xZw+bNmyfdDXUqyUOTem7f2xqnUd/bHrqRpM4Z9JLU\nOYNekjpn0EtS5wx6SeqcQS9JnTPoJalzBr1mWpJ3J7k7yV1JPpFk3yRHJrk5ydYkVyXZp+37ora+\ntW1fM9neS6Mx6DWzkhwGvBNYV1WvAPYCzgI+CHy4qn4KeAI4r93lPOCJ1v7htp809abiL2O1tNZc\n9NlJd2HZPbjhDbt7172BFyf5O+AlwKPA64BfaNs3ARcDlwKnt2WAa4CPJklV1e48sf9OWi6O6DWz\nquoR4LeBv2UQ8E8BtwJPVtUzbbdtwGFt+TDg4XbfZ9r+By1nn6XdYdBrZiU5kMEo/Ujg7wP7Aacs\nweOuT7I5yebt27fv6cNJe8yg1yw7CfibqtpeVX8H/AnwWuCAJHOHNQ8HHmnLjwBHALTt+wPf2PVB\nq2pjVa2rqnWrVk3kopnSTgx6zbK/BY5P8pIkAU4E7gFuAs5o+5wDfLotX9fWadu/tLvH56XlZNBr\nZlXVzQxOqt4G3Mng87ARuBB4T5KtDI7BX9buchlwUGt/D3DRsnda2g0jzbpJ8m7gl4Bi8IE4FzgU\nuJLBB+FW4K1V9YMkLwKuAP4xg6+1/7KqHlz6rkt7rqreD7x/l+YHgGPn2fd7wJuXo1/SUlpwRO9c\nY0la2UY9dDM313hvdp5rfE3bvgl4U1s+va3Ttp/Yjn9KkiZgwaB3rrEkrWyjHLpxrrEkrWCjHLpx\nrrEkrWCjBL1zjSVpBRvlGL1zjSVpBRtpHr1zjSVp5fIvYyWpcwa9JHXOoJekzhn0ktQ5g16SOmfQ\nS1LnDHpJ6pxBL0mdM+glqXMGvWZWkpcn2TJ0+1aSX0vysiQ3JLm//Tyw7Z8klyTZmuSOJMdM+neQ\nRmHQa2ZV1X1VdXRVHc2g9OV3gGsZXJ/pxqpaC9zIjus1nQqsbbf1wKXL32tp8Qx6aeBE4KtV9RA7\nV0nbtXraFTXwFQaX6j50+bsqLY5BLw2cBXyiLR9SVY+25a8Bh7TlZ6unNcOV1Z5lUR1NG4NeMy/J\nPsAbgU/uuq3VUlhUPQWL6mjaGPTS4Nj7bVX1WFt/bO6QTPv5eGt/tnpaM1xZTZpaBr0EZ7PjsA3s\nXCVt1+ppb2uzb44Hnho6xCNNrVGKgzsFTd1Ksh9wMoNayHM2ACcnuZ9BzeQNrf16BgV3tgK/D/zq\nMnZV2m0LVpiqqvuAowGS7MXgq+rwFLQNSS5q6xey8xS04xhMQTtuLL2X9lBVfZtBKczhtm8wmIWz\n674FnL9MXZOWzGIP3TgFTZJWmMUG/ZJNQZMkLY+Rg36pp6A511iSlsdiRvRLOgXNucaStDwWE/RO\nQZOkFWjBWTew0xS0Xx5q3gBcneQ84CHgzNZ+PXAagylo3wHOXbLeSpIWbaSgdwqaJK1c/mWsJHXO\noJekzhn0ktQ5g16SOmfQS1LnDHpJ6pxBL0mdM+glqXMGvSR1zqDXTEtyQJJrkvx1knuTvMbqaeqN\nQa9Z97vA56rqp4FXAfeyo3raWuDGtg47V09bz6B6mjT1DHrNrCT7A/8UuAygqn5QVU9i9TR1xqDX\nLDsS2A78QZLbk3ysXanV6mnqikGvWbY3cAxwaVW9Gvg2Ow7TAFZPUx8Mes2ybcC2qrq5rV/DIPit\nnqauGPSaWVX1NeDhJC9vTScC92D1NHVm1ApTBwAfA17B4GvsLwL3AVcBa4AHgTOr6okkYTCT4TQG\nFabeXlW3LXnPpaVxAfBHSfYBHmBQEe0FWD1NHRkp6NkxBe2M9oF4CfA+BlPQNiS5iMGxzQvZeQra\ncQymoB235D2XlkBVbQHWzbPJ6mnqxoKHbpyCJkkr2yjH6McyBc2ZCZK0PEYJ+rFMQXNmgiQtj1GC\nfixT0CRJy2PBoHcKmiStbKPOunEKmiStUCMFvVPQJGnl8i9jJalzBr0kdc6gl6TOGfSS1DmDXpI6\nZ9BLUucMeknqnEEvSZ0z6CWpcwa9JHXOoNdMS/JgkjuTbEmyubW9LMkNSe5vPw9s7UlySZKtSe5I\ncsxkey+NxqCX4Ger6uiqmrue00UMymSuBW5kR/2F4TKZ6xmUyZSmnkEvPZdlMtUVg16zroAvJLk1\nyfrWZplMdWXU69FLvfqZqnokyd8Dbkjy18Mbq6qSLLpMJrARYN26dYu6r57fmos+O+kuTMSDG96w\nx48x0ojeE1bqVVU90n4+DlwLHItlMtWZxRy68YSVupJkvyQ/ObcMvB64C8tkqjN7cujmdOCEtrwJ\n+DJwIUMnrICvJDkgyaF+IDSFDgGuTQKDz8IfV9XnktyCZTLVkVGDfu6EVQG/145BLvaElUGvqVJV\nDwCvmqf9G1gmUx0ZNeiX/IRVm+GwHmD16tWLuaskaRFGOkY/jhNWVbWxqtZV1bpVq1bt/m8gSfqx\nFgx6T1hJ0so2yqEbT1hJ0gq2YNB7wkqSVjYvgSBJnTPoJalzBr0kdc6gl6TOTf3VK2fxinVLcbU6\nSZrjiF6SOmfQS1LnDHpJ6pxBL0mdM+glqXMGvSR1zqDXTEuyV5Lbk3ymrR+Z5OZW8/iqJPu09he1\n9a1t+5pJ9ltaDINes+5dwL1D6x8EPlxVPwU8AZzX2s8DnmjtH277SSuCQa+ZleRw4A3Ax9p6gNcB\n17RdNgFvasunt3Xa9hPb/tLUM+g1yz4C/FvgR239IODJqnqmrc/VO4ahWsht+1Ntf2nqGfSaSUn+\nGfB4Vd06hsden2Rzks3bt29f6oeXFm3koPeklTrzWuCNSR4ErmRwyOZ3gQOSzF0Darje8bO1kNv2\n/YFvzPfA1kPWtFnMiN6TVupGVf27qjq8qtYAZwFfqqq3ADcBZ7Tddq2FPFcj+Yy2fy1jl6XdNlLQ\ne9JKM+RC4D1JtjI4Bn9Za78MOKi1vwe4aEL9kxZt1MsUz520+sm2PvJJqyRzJ62+PvyASdYD6wFW\nr169u/2X9lhVfRn4clt+ADh2nn2+B7x5WTsmLZEFR/TjOmnlcUxJWh6jjOjnTlqdBuwLvJShk1Zt\nVD/fSattC520kiSN34Ijek9aSdLKtifz6D1pJUkrwKJqxnrSSpJWHv8yVpI6Z9BLUucMeknqnEEv\nSZ0z6CWpcwa9JHXOoJekzhn0ktQ5g16SOmfQS1LnDHpJ6pxBL0mdM+g1s5Lsm+SvkvyfJHcn+UBr\nt/C9umLQa5Z9H3hdVb0KOBo4JcnxWPhenTHoNbNq4Om2+sJ2Kyx8r86MUjPWr7fqVpK9kmwBHgdu\nAL7KiIXvgbnC99JUG2VE79dbdauqflhVRzOoe3ws8NN7+phJ1ifZnGTz9u3b97iP0p4apWasX2/V\nvap6kkEd5NfQCt+3TfMVvufHFb6vqo1Vta6q1q1atWrsfZcWMtIxer/eqkdJViU5oC2/GDgZuBcL\n36szI9WMraofAke3D8W1LNHXW2A9wOrVq/f04aTdcSiwKcleDAY9V1fVZ5LcA1yZ5D8Bt7Nz4fuP\nt8L33wTOmkSnpcVabHHwJ5Ps9PW2jdrn+3q7baGvt8BGgHXr1jkq0rKrqjuAV8/TbuF7dWWUWTd+\nvZWkFWyUEb1fbyVpBVsw6P16K0krm38ZK0mdM+glqXMGvSR1zqCXpM4Z9JLUOYNekjpn0EtS5wx6\nSeqcQS9JnTPoJalzBr0kdc6gl6TOGfSS1DmDXpI6Z9BrZiU5IslNSe5JcneSd7X2lyW5Icn97eeB\nrT1JLkmyNckdSY6Z7G8gjcag1yx7Bvg3VXUUcDxwfpKjgIuAG6tqLXBjWwc4FVjbbuuBS5e/y9Li\njVJK0FGPulRVj1bVbW35/zEokXkYcDqwqe22CXhTWz4duKIGvsKgbvKhy9xtadFGGdE76lH3kqxh\nUEntZuCQqnq0bfoacEhbPgx4eOhu21rbro+1PsnmJJu3b98+tj5Lo1ow6B31qHdJfgL4FPBrVfWt\n4W2tsP2iittX1caqWldV61atWrWEPZV2z6KO0S/lqEeaBkleyCDk/6iq/qQ1PzY3OGk/H2/tjwBH\nDN398NYmTbWRg36pRz1+vdWkJQlwGXBvVf3O0KbrgHPa8jnAp4fa39bOQx0PPDU02JGm1khBP45R\nj19vNQVeC7wVeF2SLe12GrABODnJ/cBJbR3geuABYCvw+8CvTqDP0qLtvdAOI4x6NvDcUc87klwJ\nHIejHk2pqvoLIM+z+cR59i/g/LF2ShqDBYOeHaOeO5NsaW3vYxDwVyc5D3gIOLNtux44jcGo5zvA\nuUvaY0nSoiwY9I56JGll8y9jJalzBr0kdc6gl6TOGfSS1DmDXpI6Z9BLUucMeknqnEEvSZ0z6CWp\ncwa9JHXOoJekzhn0ktQ5g16SOmfQS1LnDHrNrCSXJ3k8yV1DbS9LckOS+9vPA1t7klySZGuSO5Ic\nM7meS4tj0GuW/SFwyi5tFwE3VtVa4Ma2DnAqsLbd1gOXLlMfpT22YNA76lGvqurPgW/u0nw6sKkt\nbwLeNNR+RQ18BThgrmayNO1GGdH/IY56NDsOGapx/DXgkLZ8GPDw0H7bWps09RYMekc9mlWtLGYt\n9n5J1ifZnGTz9u3bx9AzaXF29xj9Ho96/DBoSj02NzhpPx9v7Y8ARwztd3hre46q2lhV66pq3apV\nq8baWWkUe3wydndHPX4YNKWuA85py+cAnx5qf1s7D3U88NTQYEeaanvv5v0eS3JoVT26u6MeadKS\nfAI4ATg4yTbg/cAG4Ook5wEPAWe23a8HTgO2At8Bzl32Dku7aXeDfm7Us4HnjnrekeRK4Dgc9WiK\nVdXZz7PpxHn2LeD88fZIGo8Fg95RjyStbAsGvaMeSVrZ/MtYSeqcQS9JnTPoJalzBr0kdc6gl6TO\nGfSS1DmDXpI6Z9BLUucMeknqnEEvSZ0z6CWpcwa9JHXOoJekzhn0ktQ5g16SOjeWoE9ySpL7kmxN\nctE4nkOaBN/bWomWPOiT7AX8V+BU4Cjg7CRHLfXzSMvN97ZWqnGM6I8FtlbVA1X1A+BK4PQxPI+0\n3Hxva0UaR9AfBjw8tL6ttUkrne9trUgL1owdlyTrgfVt9ekk902qLz/GwcDXl/tJ88HlfsYlNY2v\n2T9Ypm4AK+K9PZF/I1jR7+1pfc1Gem+PI+gfAY4YWj+8te2kqjYCG8fw/EsmyeaqWjfpfqwknb9m\nXby3O/83GouV/pqN49DNLcDaJEcm2Qc4C7huDM8jLTff21qRlnxEX1XPJHkH8HlgL+Dyqrp7qZ9H\nWm6+t7VSjeUYfVVdD1w/jsdeZlP79XuKdf2adfLe7vrfaExW9GuWqpp0HyRJY+QlECSpc10GfZIf\nJtkydFszxud6e5KPjuvxp0GSSvLfh9b3TrI9yWcWuN8JC+2j8Wr/dh8aWn9vkosn2KWpk4G/SHLq\nUNubk3xukv1aShObRz9m362qoyfdiY58G3hFkhdX1XeBk5lnWqGm0veBn0vym1U1kXng066qKsmv\nAJ9MchODXPwN4JTJ9mzpdDmin0+SvZL85yS3JLkjyS+39hOS/M8kn07yQJINSd6S5K+S3JnkH7b9\n/nmSm5PcnuSLSQ6Z5zlWJflUe45bkrx2uX/PMboeeENbPhv4xNyGJMcm+d/ttfnLJC/f9c5J9kty\neXtdb0/ipQOWxzMMTiS+e9cNSdYk+VL7PNyYZPXyd286VNVdwJ8BFwL/Ebiiqr6a5Jz2nt2S5L8l\neUH7Rvvxlg93JXnnZHs/gqrq7gb8ENjSbte2tvXAv2/LLwI2A0cCJwBPAoe29keAD7T93gV8pC0f\nyI6T178EfKgtvx34aFv+Y+Bn2vJq4N5JvxZL9Ho+DbwSuAbYt72uJwCfadtfCuzdlk8CPtWWh/f5\nDeBfteUDgP8L7Dfp3633W/u3eynwILA/8F7g4rbtz4Bz2vIvAn866f5O+LXaD7gPuLNlwSuAPx16\nb28EfgE4DvgfQ/c7YNJ9X+g2S4duXg+8MskZbX1/YC3wA+CWqnoUIMlXgS+0fe4EfrYtHw5cleRQ\nYB/gb+Z53pOAo5LMrb80yU9U1dNL8DtNVFXd0c51nM1zpxfuD2xKshYo4IXzPMTrgTcmeW9b35f2\nn+FYOqxnVdW3klwBvBP47tCm1wA/15Y/DvzWcvdtmlTVt5NcBTxdVd9PchLwT4DN7TP9YgbXOvo8\n8PIklwCfZUdeTK1eg34+AS6oqs/v1JicwOA45pwfDa3/iB2v0X8Bfqeqrmv3uXie53gBcHxVfW/p\nuj1VrgN+m8FI/aCh9l8Hbqqqf9H+M/jyPPcN8PNVNW3XfZkVHwFuA/5g0h2Zcj9qNxi8Zy+vqv+w\n605JXsngctXnAz/PjmsbTaWZOUbP4H/hf53khQBJ/lGS/RZx//3ZcQLynOfZ5wvABXMrSXo7IXw5\ng8Nad+7SPvzavP157vt54IK0oVGSV4+lh5pXVX0TuBo4b6j5LxlcxgHgLcD/Wu5+TbkvAmcmORgg\nyUFJVidZxeAw7icZHM8/ZpKdHMUsBf3HgHuA25LcBfwei/tGczGDs/K38vxXsXsnsK6d3LoH+JU9\n6O/UqaptVXXJPJt+C/jNJLfz/K/przM4pHNHkrvbupbXhxhchXHOBcC5Se4A3srgnJSaNqD5APDF\n9hp9ATiEwYXt/jzJFgbfkN43uV6Oxr+MlaTOzdKIXpJmkkEvSZ0z6CWpcwa9JHXOoJekzhn0ktQ5\ng16SOmfQS1Ln/j9RGhu6vsg+lwAAAABJRU5ErkJggg==\n",
             "text/plain": [
-              "[464, 842]"
+              "<Figure size 432x288 with 2 Axes>"
             ]
           },
           "metadata": {
             "tags": []
-          },
-          "execution_count": 125
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HAot5UR3G9In",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f24751d4-1210-4d30-9440-e749080f4a0e"
-      },
-      "source": [
-        "survived=[sum(titanic[:,11]==passenger_survived[0]),\n",
-        "          sum(titanic[:,11]==passenger_survived[1])]\n",
-        "survived"
-      ],
-      "execution_count": 142,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[806, 498]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 142
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8uiPu4bKFrt3",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        },
-        "outputId": "cac3a3b5-872d-4e72-ef77-d04ede9a1aba"
-      },
-      "source": [
-        "\n",
-        "\n"
-      ],
-      "execution_count": 143,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-143-87ea95c6a7f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'axes' is not defined"
-          ]
+          }
         }
       ]
     },
@@ -2079,8 +2191,50 @@
         "colab_type": "text"
       },
       "source": [
-        "#Ex7.\n",
-        " "
+        "# String to Numerical & Label Encoder\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CKbhcVfHOPIv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "1489fbb8-4bff-4db5-b7c7-e9eba5cac73e"
+      },
+      "source": [
+        "titanic[titanic == passenger_class[0]] =0\n",
+        "titanic[titanic == passenger_class[1]] =1\n",
+        "titanic[titanic == passenger_class[2]] =2\n",
+        "titanic[titanic == passenger_male[0]] =0\n",
+        "titanic[titanic == passenger_male[1]] =1\n",
+        "titanic[titanic == passenger_survived[0]] =0\n",
+        "titanic[titanic == passenger_survived[1]] =1\n",
+        "titanic"
+      ],
+      "execution_count": 204,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([['0', '0', '0', '0', '1'],\n",
+              "       ['0', '1', '1', '2', '1'],\n",
+              "       ['0', '0', '1', '2', '0'],\n",
+              "       ...,\n",
+              "       ['2', '1', '0', '0', '0'],\n",
+              "       ['2', '1', '0', '0', '0'],\n",
+              "       ['2', '1', '0', '0', '0']], dtype='<U82')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 204
+        }
       ]
     }
   ]
