--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -1690,20 +1690,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "77129b9a-2ffd-4d87-f6a4-503ca2d94a32"
+        "outputId": "33c939d9-4f03-4020-b91c-bc57eefa8c92"
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "model = DecisionTreeClassifier(random_state=0)\n",
+        "model = DecisionTreeClassifier(random_state=0, criterion='entropy')\n",
         "model.fit(X_train_norm, y_train)\n"
       ],
-      "execution_count": 98,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+              "DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=None,\n",
               "                       max_features=None, max_leaf_nodes=None,\n",
               "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
               "                       min_samples_leaf=1, min_samples_split=2,\n",
@@ -1714,7 +1714,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 98
+          "execution_count": 109
         }
       ]
     },
@@ -1727,25 +1727,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d8fa2dff-c196-423f-e4c9-dd71f9b05a87"
+        "outputId": "2cde6fbc-c08d-45c8-d976-a00842a7fdcb"
       },
       "source": [
         "y_predict = model.predict(X_test_norm)\n",
         "sum(y_predict == y_test) / len(y_test)"
       ],
-      "execution_count": 104,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8129770992366412"
+              "0.8244274809160306"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 110
         }
       ]
     }
