--- a/Model_W11.ipynb
+++ b/Model_W11.ipynb
@@ -1127,7 +1127,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a4953c98-5bbf-48b1-835f-26c8d3c5af29"
+        "outputId": "2fd11dce-f613-43ab-a466-71c9b2465f09"
       },
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
@@ -1136,7 +1136,7 @@
         "accuracy = cross_val_score(clf, X_train_norm, y_train, cv=5)\n",
         "accuracy.mean()"
       ],
-      "execution_count": 265,
+      "execution_count": 291,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1148,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 265
+          "execution_count": 291
         }
       ]
     },
@@ -1161,7 +1161,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "24a0db72-bcd1-48c6-fe94-87d1f1f55afc"
+        "outputId": "e0f3135a-99ce-4f77-afdf-ce8c5afefea2"
       },
       "source": [
         "#Test Model besed on Validation Accuracy\n",
@@ -1169,7 +1169,7 @@
         "y_predict = clf.predict(X_val_norm)\n",
         "sum(y_predict == y_val) / len(y_val)"
       ],
-      "execution_count": 266,
+      "execution_count": 292,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1181,7 +1181,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 266
+          "execution_count": 292
         }
       ]
     },
@@ -1204,28 +1204,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "18cdab64-1d3c-43e2-804f-4aee52f7ca67"
+        "outputId": "4cbe4795-3299-41d4-ed8a-dad9a253897d"
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "clf = DecisionTreeClassifier(random_state=0)\n",
+        "clf = DecisionTreeClassifier(random_state=0, max_depth=5)\n",
         "from sklearn.model_selection import cross_val_score\n",
         "accuracy = cross_val_score(clf, X_train_norm, y_train, cv=5)\n",
         "accuracy.mean()"
       ],
-      "execution_count": 230,
+      "execution_count": 281,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6817706958039306"
+              "0.7326564989756431"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 230
+          "execution_count": 281
         }
       ]
     },
@@ -1234,7 +1234,11 @@
       "metadata": {
         "id": "e8M7KkbqI0Io",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "22cf54b5-b4a1-4316-f91e-30affd5b8a39"
       },
       "source": [
         "#Test Model besed on Validation Accuracy\n",
@@ -1242,8 +1246,21 @@
         "y_predict = clf.predict(X_val_norm)\n",
         "sum(y_predict == y_val) / len(y_val)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 282,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7311977715877437"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 282
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1252,7 +1269,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Support Vector Machine (SVM)"
+        "#Support Vector Machine "
       ]
     },
     {
@@ -1264,28 +1281,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fac7a2e1-9abe-454d-e40d-da3abb6946b8"
+        "outputId": "99b3cff6-e0e5-418b-d56e-b068a7903cb0"
       },
       "source": [
         "from sklearn.svm import SVC\n",
-        "clf = SVC(gamma='auto')\n",
+        "clf = SVC(C=2.0, gamma='scale')\n",
         "from sklearn.model_selection import cross_val_score\n",
         "accuracy = cross_val_score(clf, X_train_norm, y_train, cv=5)\n",
         "accuracy.mean()"
       ],
-      "execution_count": 247,
+      "execution_count": 297,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6971005387358676"
+              "0.8044640716291068"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 247
+          "execution_count": 297
         }
       ]
     },
@@ -1298,26 +1315,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6c1b3d1f-21b5-4c4d-f17a-5153d67c00fd"
+        "outputId": "e0de0ef8-3efd-416c-93ad-8385c943c277"
       },
       "source": [
         "clf.fit(X_train_norm,y_train)\n",
         "y_predict = clf.predict(X_val_norm)\n",
         "sum(y_predict == y_val) / len(y_val)"
       ],
-      "execution_count": 232,
+      "execution_count": 298,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6754874651810585"
+              "0.7980501392757661"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 232
+          "execution_count": 298
         }
       ]
     },
@@ -1340,27 +1357,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bc9e430e-32c4-4866-802d-99c064d23e77"
+        "outputId": "affe734a-cce1-4a18-b93c-70daf7cae5fa"
       },
       "source": [
-        "\n",
+        "from sklearn import svm\n",
+        "clf =svm.SVC(gamma='scale')\n",
         "from sklearn.model_selection import cross_val_score\n",
         "accuracy = cross_val_score(clf, X_train_norm, y_train, cv=5)\n",
         "accuracy.mean()"
       ],
-      "execution_count": 233,
+      "execution_count": 293,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7504842552545716"
+              "0.8027237271416647"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 233
+          "execution_count": 293
         }
       ]
     },
@@ -1373,26 +1391,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ebc325aa-6900-478f-c488-7e06f7a69225"
+        "outputId": "d7e89941-ca35-4c42-8583-ab56f53d1795"
       },
       "source": [
         "clf.fit(X_train_norm,y_train)\n",
         "y_predict = clf.predict(X_val_norm)\n",
         "sum(y_predict == y_val) / len(y_val)"
       ],
-      "execution_count": 234,
+      "execution_count": 294,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7493036211699164"
+              "0.7966573816155988"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 234
+          "execution_count": 294
         }
       ]
     },
@@ -1564,29 +1582,67 @@
       "metadata": {
         "id": "FBXpcc7YLLad",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "419c408a-8c8f-4d6a-90f0-faad45855692"
       },
       "source": [
-        "GradientBoostingClassifier\n",
+        "import xgboost as xgb\n",
+        "from sklearn.metrics import auc,accuracy_score, confusion_matrix,  mean_squared_error\n",
+        "xgb = xgb.XGBClassifier()\n",
         "from sklearn.model_selection import cross_val_score\n",
         "accuracy = cross_val_score(clf, X_train_norm, y_train, cv=5)\n",
         "accuracy.mean()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 299,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8044640716291068"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 299
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "QZPUQkzjMzTm",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "166fd5f3-293d-4542-fc98-c1d5a2786cbb"
       },
       "source": [
-        ""
+        "clf.fit(X_train_norm,y_train)\n",
+        "y_predict = clf.predict(X_val_norm)\n",
+        "sum(y_predict == y_val) / len(y_val)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 300,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7980501392757661"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 300
+        }
+      ]
     }
   ]
 }
